--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,7 @@
                 <configuration>
                     <formats>
                         <format>xml</format>
+                        <format>html</format>
                     </formats>
                 </configuration>
             </plugin>
